#00004753: Content Module "accordion": added setting for effect speed

--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -1,4 +1,4 @@
-#Thu Jan 21 15:32:27 CET 2016
+#Tue Sep 13 15:32:26 CEST 2016
 align=Ausrichting
 attachments-from-template-not-supported=Attachments from a template are not supported
 close=Close
@@ -21,6 +21,10 @@ page=Page
 submit=Submit
 width=Width
 year=Year
+
+accordion.settings.effect-speed=Effect Speed
+accordion.settings.effect-speed-options=fast|fast,slow|slow
+accordion.settings.expand.first-section-options=Expand First Section|true
 
 align.options=Right|right,Left|left
 
@@ -133,6 +137,7 @@ form.settings.action.options=Send data as mail|mail,Store data in database|store
 form.settings.after-submit=After submit
 form.settings.after-submit.options=Show message|message,Redirect to page|redirect
 form.settings.database=Database
+form.settings.date.year-range=Year range
 form.settings.defaultvalue=Default Value
 form.settings.email=Mail Addresses
 form.settings.field-type=Field type
@@ -226,6 +231,7 @@ login.settings.use-https=Use HTTPS for login
 
 modal.layout=Layout
 modal.layout.options=Popup|overlay,Dialog|dialog
+modal.load-content=Lazy load modules when popup gets visible 
 
 module.accordion=Accordion
 module.accordion-page=Accordion Page
@@ -375,7 +381,3 @@ vote.one-vote=one review
 vote.reset=Reset
 vote.votes=Reviews
 vote.your-vote=Your rating for this page
-
-modal.load-content=Lazy load modules when popup gets visible 
-
-form.settings.date.year-range=Year range
