--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -1,4 +1,4 @@
-#Thu Jan 21 15:32:35 CET 2016
+#Tue Sep 13 15:32:32 CEST 2016
 align=Ausrichting
 attachments-from-template-not-supported=Dateianh\u00E4nge aus Vorlagen werden nicht unterst\u00FCtzt
 close=Schlie\u00DFen
@@ -21,6 +21,10 @@ page=Seite
 submit=Senden
 width=Breite
 year=Jahr
+
+accordion.settings.effect-speed=Effekt Geschwindigkeit
+accordion.settings.effect-speed-options=schnell|fast,langsam|slow
+accordion.settings.expand.first-section-options=Ersten Abschnitt anzeigen|true
 
 align.options=Rechts|right,Links|left
 
@@ -62,8 +66,8 @@ column-slider.settings.show-title=Titel anzeigen
 columns.settings.class=CSS-Klasse (optional)
 columns.settings.layout=Layout
 columns.settings.layout.options=Standard|standard,Trennlinien|lines
-columns.settings.responsive=Verhalten f\u00FCr Mobilgeräte
-columns.settings.responsive.options=Spalten aufl\u00F6sen bei kleiner Auflösung|clear,Spalten aufl\u00F6sen bei mittlerer Auflösung|medium-clear,Spalten beibehalten|keep
+columns.settings.responsive=Verhalten f\u00FCr Mobilger\u00E4te
+columns.settings.responsive.options=Spalten aufl\u00F6sen bei kleiner Aufl\u00F6sung|clear,Spalten aufl\u00F6sen bei mittlerer Aufl\u00F6sung|medium-clear,Spalten beibehalten|keep
 columns.settings.style=CSS-Stil (optional)
 columns.settings.width=Relative Breite
 
@@ -137,6 +141,7 @@ form.settings.action.options=Daten per Mail senden|mail,Daten in Datenbank speic
 form.settings.after-submit=Nach Absenden der Daten
 form.settings.after-submit.options=Zeige Nachricht|message,Verzweige zu Seite|redirect
 form.settings.database=Datenbank
+form.settings.date.year-range=Jahresbereich
 form.settings.defaultvalue=Vorgabewert
 form.settings.email=Mail Adressen
 form.settings.field-type=Feld-Typ
@@ -234,6 +239,7 @@ login.settings.use-https=F\u00FCr Anmeldung https verwenden
 
 modal.layout=Layout
 modal.layout.options=Popup|overlay,Dialog|dialog
+modal.load-content=Lade Module erst wenn Popup sichtbar wird
 
 module.accordion=Akkordeon
 module.accordion-page=Akkordeon Seite
@@ -378,6 +384,3 @@ vote.one-vote=eine Bewertung
 vote.reset=zur\u00FCcksetzen
 vote.votes=Bewertungen
 vote.your-vote=Ihre Bewertung dieser Seite
-
-modal.load-content=Lade Module erst wenn Popup sichtbar wird
-form.settings.date.year-range=Jahresbereich
