added video/webm extension

--- a/OpenWGA/libraries/wgapi/src/main/java/de/innovationgate/webgate/api/mime-to-suffix.properties
+++ b/OpenWGA/libraries/wgapi/src/main/java/de/innovationgate/webgate/api/mime-to-suffix.properties
@@ -121,6 +121,7 @@ video/x-mpeg=mp2
 video/x-mpeq2a=mp2
 video/x-ms-asf=asf
 video/x-msvideo=avi
+video/webm=webm
 windows/metafile=wmf
 www/mime=mime
 x-music/x-midi=midi
