--- a/OpenWGA/plugins/additional-script-langs/build.gradle
+++ b/OpenWGA/plugins/additional-script-langs/build.gradle
@@ -8,9 +8,12 @@ dependencies {
 	compileClasspath ('ro.isdc.wro4j:wro4j-extensions:1.7.8'){
 		exclude group: 'me.n4u.sass', module: 'sass-gems'
 	}
+	
+	compileClasspath 'org.webjars:json2:20110223'
+	
 	compileClasspath 'org.jruby:jruby-complete:1.7.20'
 	compileClasspath 'com.darrinholst:sass-java-gems:3.4.4.3'
-    
+ 	compileClasspath 'javax.servlet:javax.servlet-api:3.0.1'   
 }
 
 sourceSets {
