#00004768: Proxy root URL / to an apps homepage

--- a/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
+++ b/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
@@ -146,9 +146,10 @@ WGAConfiguration/designConfiguration/designFileCacheSize = Design File Cache Siz
 
 
 VirtualHost/servername = Host Name
-VirtualHost/defaultDatabase = Default Database
+VirtualHost/defaultDatabase = Default App
 VirtualHost/enabled = enabled
-VirtualHost/hideDefaultDatabaseInURL = hide default database in URL
+VirtualHost/hideDefaultDatabaseInURL = hide default App-key in URL
+VirtualHost/hideHomepageURL = hide homepage URL for Default App
 
 ContentStore/overlay/name = Design directory for customization
 
