#00004795: Added robots.txt to virtual host config

--- a/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
+++ b/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
@@ -26,6 +26,8 @@ ContentStore/implClassName.help = The type of the content store
 ContentStore/defaultLanguage = Default Language
 ContentStore/defaultLanguage.help = A content language of this application that should be used as fallback. It is served when no other languages match the needs of a browser user.
 
+ContentStore/overlay/name = Design directory for customization
+
 ###
 ContentDatabase/enabled = Enabled
 ContentDatabase/enabled.help = Determines if the data source should be connected. Disabling this will disconnect the data source while keeping the configuration.
@@ -150,8 +152,7 @@ VirtualHost/defaultDatabase = Default App
 VirtualHost/enabled = enabled
 VirtualHost/hideDefaultDatabaseInURL = hide default App-key in URL
 VirtualHost/hideHomepageURL = hide homepage URL for Default App
-
-ContentStore/overlay/name = Design directory for customization
+VirtualHost/robotsTxt = robots.txt
 
 ProxyConfiguration/enabled = Enabled
 ProxyConfiguration/httpProxy = Http proxy host
