#00004799: Added restriction to admin- and authoring apps to v-host config

--- a/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
+++ b/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
@@ -153,6 +153,8 @@ VirtualHost/enabled = enabled
 VirtualHost/hideDefaultDatabaseInURL = hide default App-key in URL
 VirtualHost/hideHomepageURL = hide homepage URL for Default App
 VirtualHost/robotsTxt = robots.txt
+VirtualHost/allowAdminApps =Allow Admin Applications
+VirtualHost/allowAuthoringApps =Allow Authoring Applications
 
 ProxyConfiguration/enabled = Enabled
 ProxyConfiguration/httpProxy = Http proxy host
