#00004818: Corrected label for page-editors "MANAGERS"

--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -735,7 +735,7 @@ properties.position.do-not-change=nicht ver\u00E4ndern
 properties.position.no-positions-avaliable=Keine Positionen verf\u00FCgbar
 properties.root-page-restrictions=Erlaubte Hauptseiten\:
 properties.root-page-restrictions-options=Beliebig|any,Nur Seiten folgender Seitentypen|fixDocTypes
-properties.struct-editors-options=jeder|*,nur definierte Benutzer|custom, vererbt|, nur Manager|%none
+properties.struct-editors-options=jeder|*,nur definierte Benutzer|custom, vererbt|, nur Chief-Editoren|%none
 properties.struct-readers-options=nur definierte Benutzer|custom, vererbt|
 properties.struct-workflow-default=default ({1})
 properties.tab-attachments=Anh\u00E4nge
