--- a/OpenWGA/plugins/cm/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_en/general.properties
@@ -729,7 +729,7 @@ properties.position.do-not-change=do not change
 properties.position.no-positions-avaliable=No Positions available
 properties.root-page-restrictions=Allowed main pages\:
 properties.root-page-restrictions-options=Any|any,Only pages of the following content types|fixDocTypes
-properties.struct-editors-options=everybody|*,only defined users|custom,inherited|,Manager only|%none
+properties.struct-editors-options=everybody|*,only defined users|custom,inherited|,only chief editors|%none
 properties.struct-readers-options=only defined users|custom, inherited|
 properties.struct-workflow-default=default ({1})
 properties.tab-attachments=Attachments
