#00004843: Content Module "childpages": added "headings" to module settings

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -1,4 +1,4 @@
-#Tue Sep 13 15:32:32 CEST 2016
+#Mon Jan 30 15:32:44 CET 2017
 align=Ausrichting
 attachments-from-template-not-supported=Dateianh\u00E4nge aus Vorlagen werden nicht unterst\u00FCtzt
 close=Schlie\u00DFen
@@ -40,6 +40,7 @@ collections.dbkey=DBKey (leer \= aktuelle Datenbank)
 collections.entries=Eintr\u00E4ge (leer oder 0 \= alle)
 collections.group-by-date=Nach Datum Gruppieren
 collections.layout=Layout
+collections.news-heading=\u00DCberschriften
 collections.parent=Parent
 collections.query=Query
 collections.query-type=Typ
