--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -1,4 +1,4 @@
-#Tue Sep 13 15:32:26 CEST 2016
+#Mon Jan 30 15:32:36 CET 2017
 align=Ausrichting
 attachments-from-template-not-supported=Attachments from a template are not supported
 close=Close
@@ -40,6 +40,7 @@ collections.dbkey=DBKey (empty \= current database)
 collections.entries=Entries (empty or 0 \= all)
 collections.group-by-date=Group By Date
 collections.layout=Layout
+collections.news-heading=HEadings
 collections.parent=Parent
 collections.query=Query
 collections.query-type=Type
