#00004851: CM RTF Editor: added <pre> as format option

--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -1,4 +1,5 @@
-#Tue Apr 28 12:52:25 CEST 2015
+#Thu Feb 09 13:47:04 CET 2017
+about=\u00DCber {1} Content Manager
 access=Berechtigung
 actions=Aktionen
 add=Hinzuf\u00FCgen
@@ -599,6 +600,7 @@ dialog.scale-image.scaling=Skaliere Bild
 dialog.search.lucene-is-building-index=WGA erstellt gerade einen Volltextindex. Solange ist die Suche nicht m\u00F6glich.<br>Bitte versuchen Sie es sp\u00E4ter noch einmal
 dialog.search.no-lucene-index=Die Datenbank ist nicht volltextindiziert.<br>Bitte erzeugen Sie zun\u00E4chst einen Lucene Volltextindex.
 dialog.settings.animation-options=Seitenbereiche|panels, Dialoge|dialogs, Siteexplorer|siteexplorer
+dialog.settings.hide_archived_only-options=Verstecke archivierte Seiten|true
 dialog.settings.no-animation-for=Keine Animationen f\u00FCr
 dialog.settings.rtftoolbar=RTF Editor
 dialog.settings.rtftoolbar-options=alten WGA 4.0 RTF-Editor verwenden|4.0
@@ -848,6 +850,7 @@ rtf.paragraph.justify-left=Absatz linksb\u00FCndig
 rtf.paragraph.justify-right=Absatz rechtsb\u00FCndig
 rtf.paragraph.normal-heading=normaler Absatz
 rtf.paragraph.outdent=Ausr\u00FCcken
+rtf.paragraph.pre=PRE
 rtf.section=Abschnitt
 rtf.section.add=Abschnitt Hinzuf\u00FCgen
 rtf.section.append_paragraph=Absatz nach Abschnitt einf\u00FCgen
@@ -931,7 +934,3 @@ validation.title=Inhalt mu\u00DF \u00FCberarbeitet werden
 versions.actuel-content-versions=Aktuelle Inhaltsversionen
 versions.other-languages=weitere Sprachen
 versions.title=Versionen
-
-dialog.settings.hide_archived_only-options=Verstecke archivierte Seiten|true
-
-about=Über {1} Content Manager
