--- a/OpenWGA/plugins/cm/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_en/general.properties
@@ -1,4 +1,5 @@
-#Tue Apr 28 12:52:18 CEST 2015
+#Thu Feb 09 13:46:57 CET 2017
+about=About {1} Content Manager
 access=Access
 actions=Actions
 add=Add
@@ -599,6 +600,7 @@ dialog.scale-image.scaling=Scaling Image
 dialog.search.lucene-is-building-index=WGA is currently building the lucene fulltext index.<br>Please try again later
 dialog.search.no-lucene-index=This database has no lucene fulltext index.<br>Please ask your administrator to create an index.
 dialog.settings.animation-options=Panels|panels, Dialogs|dialogs, Siteexplorer|siteexplorer
+dialog.settings.hide_archived_only-options=hide archived pages|true
 dialog.settings.no-animation-for=No animation for
 dialog.settings.rtftoolbar=RTF Editor
 dialog.settings.rtftoolbar-options=Use old WGA 4.0 Editor|4.0
@@ -842,6 +844,7 @@ rtf.paragraph.justify-left=justify left
 rtf.paragraph.justify-right=justify right
 rtf.paragraph.normal-heading=Normal Paragraph
 rtf.paragraph.outdent=outdent
+rtf.paragraph.pre=PRE
 rtf.section=Section
 rtf.section.add=Add
 rtf.section.append_paragraph=Append Paragraph
@@ -926,7 +929,3 @@ validation.title=Content is not Valid
 versions.actuel-content-versions=Actual content versions
 versions.other-languages=Other languages
 versions.title=Versions
-
-dialog.settings.hide_archived_only-options=hide archived pages|true
-
-about=About {1} Content Manager
