--- a/OpenWGA/libraries/wgutils/build.gradle
+++ b/OpenWGA/libraries/wgutils/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile 'org.codehaus.woodstox:wstx-asl:3.2.3'
     compile 'com.thoughtworks.xstream:xstream:1.4.7'
     
+    compile 'com.twelvemonkeys.imageio:imageio-jpeg:3.3.2'
+    
     compileClasspath 'javax.servlet:javax.servlet-api:3.0.1'
 
 }
