--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -14,7 +14,7 @@ image-poster=Bild / Poster
 lang=de
 margins=R\u00E4nder
 month=Monat
-more=mehr anzeigen ...
+more=mehr anzeigen
 no-image=Kein Bild
 none=- nicht ausgew\u00E4hlt -
 page=Seite
