--- a/OpenWGA/plugins/additional-script-langs/build.gradle
+++ b/OpenWGA/plugins/additional-script-langs/build.gradle
@@ -1,19 +1,19 @@
 
 dependencies {
     
-    compile project(":wga");
+    compileClasspath project(":wga");
     compileClasspath project(":wgaBuildTools");
     
-    compileClasspath 'ro.isdc.wro4j:wro4j-core:1.7.8'
-	compileClasspath ('ro.isdc.wro4j:wro4j-extensions:1.7.8'){
+    compile 'ro.isdc.wro4j:wro4j-core:1.7.8'
+	compile ('ro.isdc.wro4j:wro4j-extensions:1.7.8'){
 		exclude group: 'me.n4u.sass', module: 'sass-gems'
 	}
 	
-	compileClasspath 'org.webjars:json2:20110223'
+	compile 'org.webjars:json2:20110223'
 	
-	compileClasspath 'org.jruby:jruby-complete:1.7.20'
-	compileClasspath 'com.darrinholst:sass-java-gems:3.4.4.3'
- 	compileClasspath 'javax.servlet:javax.servlet-api:3.0.1'   
+	compile 'org.jruby:jruby-complete:1.7.20'
+	compile 'com.darrinholst:sass-java-gems:3.4.4.3'
+ 	compile 'javax.servlet:javax.servlet-api:3.0.1'   
 }
 
 sourceSets {
@@ -29,6 +29,17 @@ sourceSets {
 	}
 } 
 
+task cleanupPluginJars(type: Delete) {
+	println "Delete old *.jar-s ..."
+	delete fileTree(dir: "design/files/system/jars", include: "*.jar")
+}
+
+task buildPluginJars(type: Copy, dependsOn: [cleanupPluginJars,jar]) {
+	println "Copy *.jar-s ..."
+    from(configurations.runtime.files)
+   	into 'design/files/system/jars'
+}
+
 task updatePluginVersion << {
 	def version = "${openwga_version_major}.${openwga_version_minor}.${openwga_version_maintenance}.${openwga_version_patch}"
 	def build = "${openwga_version_build}"
@@ -39,7 +50,7 @@ task updatePluginVersion << {
 
 }
 
-task buildPlugin(type: Zip, dependsOn: [build, updatePluginVersion]){
+task buildPlugin(type: Zip, dependsOn: [buildPluginJars, updatePluginVersion]){
     archiveName = "de.innovationgate.additional-script-langs-${project.version}.wgaplugin"    
     from('design') {
         into '/'
