--- a/OpenWGA/server/src/main/webapp/WEB-INF/web.xml
+++ b/OpenWGA/server/src/main/webapp/WEB-INF/web.xml
@@ -84,6 +84,10 @@
 		<location>/error.jsp</location>
 	</error-page>
 	<error-page>
+		<error-code>401</error-code>
+		<location>/error.jsp</location>
+	</error-page>
+	<error-page>
 		<error-code>403</error-code>
 		<location>/error.jsp</location>
 	</error-page>
