--- a/OpenWGA/libraries/wga/build.gradle
+++ b/OpenWGA/libraries/wga/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile fileTree(dir: '../../customLibs/datedFileAppender', include: ['*.jar'])
     compile 'xerces:xercesImpl:2.11.0'
     compile 'org.apache.lucene:lucene-core:3.5.0'
+    compile 'org.apache.lucene:lucene-analyzers:3.5.0'
     compile 'org.apache.lucene:lucene-highlighter:3.5.0'
     compile 'commons-fileupload:commons-fileupload:1.2.1'
     compile 'org.apache.jackrabbit:jackrabbit-webdav:1.6.5'
