#00004896: Added plugin-cs-maintenance to OpenWGA gradle build

--- a/OpenWGA/server/build.gradle
+++ b/OpenWGA/server/build.gradle
@@ -46,6 +46,7 @@ task buildPlugins(type: Copy) {
 	from (project(":plugin-additional-script-langs").tasks.buildPlugin.archivePath)
 	from (project(":plugin-management").tasks.buildPlugin.archivePath)
 	from (project(":plugin-rest").tasks.buildPlugin.archivePath)
+	from (project(":plugin-cs-maintenance").tasks.buildPlugin.archivePath)
    	into 'build/extra/WEB-INF/default-plugins'
 }
 buildPlugins.dependsOn project(":plugin-cm").tasks.buildPlugin
@@ -55,5 +56,6 @@ buildPlugins.dependsOn project(":plugin-admin").tasks.buildPlugin
 buildPlugins.dependsOn project(":plugin-additional-script-langs").tasks.buildPlugin
 buildPlugins.dependsOn project(":plugin-management").tasks.buildPlugin
 buildPlugins.dependsOn project(":plugin-rest").tasks.buildPlugin
+buildPlugins.dependsOn project(":plugin-cs-maintenance").tasks.buildPlugin
 
 war.dependsOn writeVersion, buildPlugins
