--- a/OpenWGA/settings.gradle
+++ b/OpenWGA/settings.gradle
@@ -49,3 +49,6 @@ project(":plugin-additional-script-langs").projectDir = file("plugins/additional
 
 include ":plugin-rest"
 project(":plugin-rest").projectDir = file("plugins/rest")
+
+include ":plugin-cs-maintenance"
+project(":plugin-cs-maintenance").projectDir = file("plugins/cs-maintenance")
