--- a/OpenWGA/server/build.gradle
+++ b/OpenWGA/server/build.gradle
@@ -47,6 +47,7 @@ task buildPlugins(type: Copy) {
 	from (project(":plugin-management").tasks.buildPlugin.archivePath)
 	from (project(":plugin-rest").tasks.buildPlugin.archivePath)
 	from (project(":plugin-cs-maintenance").tasks.buildPlugin.archivePath)
+	from (project(":plugin-XFireServer").tasks.buildPlugin.archivePath)
    	into 'build/extra/WEB-INF/default-plugins'
 }
 buildPlugins.dependsOn project(":plugin-cm").tasks.buildPlugin
@@ -57,5 +58,6 @@ buildPlugins.dependsOn project(":plugin-additional-script-langs").tasks.buildPlu
 buildPlugins.dependsOn project(":plugin-management").tasks.buildPlugin
 buildPlugins.dependsOn project(":plugin-rest").tasks.buildPlugin
 buildPlugins.dependsOn project(":plugin-cs-maintenance").tasks.buildPlugin
+buildPlugins.dependsOn project(":plugin-XFireServer").tasks.buildPlugin
 
 war.dependsOn writeVersion, buildPlugins
