#00004898:: We decided that xFire no longer is a separate plugin but part of OpenWGA from now on.

--- a/OpenWGA/build.gradle
+++ b/OpenWGA/build.gradle
@@ -2,6 +2,7 @@ allprojects {
     apply plugin: 'java'
     group='de.innovationgate.openwga'
     version="${openwga_version_major}.${openwga_version_minor}.${openwga_version_maintenance}.${openwga_version_patch}.b${openwga_version_build}"
+    compileJava.options.encoding = 'ISO-8859-1'
     sourceCompatibility = 1.7
     repositories {
         mavenCentral()
