--- a/OpenWGA/libraries/XFireServer/.project
+++ b/OpenWGA/libraries/XFireServer/.project
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>plugin-XFireServer</name>
+	<name>XFireServer</name>
 	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>de.innovationgate.eclipse.ids.builders.WGADesignResourceValidator</name>
+			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
-	        <arguments>
-	        </arguments>
-	    </buildCommand>
 		<buildCommand>
 			<name>org.eclipse.buildship.core.gradleprojectbuilder</name>
 			<arguments>
@@ -22,7 +17,6 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>de.innovationgate.eclipse.ids.natures.WGADesign</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
 	</natures>
