--- a/OpenWGA/server/build.gradle
+++ b/OpenWGA/server/build.gradle
@@ -12,7 +12,8 @@ compileJava.options.encoding = 'ISO-8859-1'
 
 dependencies {
     compile project(":wga");
-    compile project(":tmlScript");
+    compile project(":tmlScript");    
+    compile project(":XFireServer");
     
     compileClasspath project(":wgaBuildTools");
 }
@@ -47,7 +48,6 @@ task buildPlugins(type: Copy) {
 	from (project(":plugin-management").tasks.buildPlugin.archivePath)
 	from (project(":plugin-rest").tasks.buildPlugin.archivePath)
 	from (project(":plugin-cs-maintenance").tasks.buildPlugin.archivePath)
-	from (project(":plugin-XFireServer").tasks.buildPlugin.archivePath)
    	into 'build/extra/WEB-INF/default-plugins'
 }
 buildPlugins.dependsOn project(":plugin-cm").tasks.buildPlugin
@@ -58,6 +58,5 @@ buildPlugins.dependsOn project(":plugin-additional-script-langs").tasks.buildPlu
 buildPlugins.dependsOn project(":plugin-management").tasks.buildPlugin
 buildPlugins.dependsOn project(":plugin-rest").tasks.buildPlugin
 buildPlugins.dependsOn project(":plugin-cs-maintenance").tasks.buildPlugin
-buildPlugins.dependsOn project(":plugin-XFireServer").tasks.buildPlugin
 
 war.dependsOn writeVersion, buildPlugins
