typo "primäre datai"

--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -542,7 +542,7 @@ dialog.link.select-document=Bitte w\u00E4hlen Sie ein Dokument aus
 dialog.link.source=Quelle
 dialog.link.source.clipboard=Datei aus Zwischenablage
 dialog.link.sources=Externer Link|exturl,Interner Link|int,Interner Link per eindeutigem Namen|intname,Datei aus diesem Dokument|intfile,Datei aus beliebigem Dokument|extfile,Datei aus Dateicontainer|file
-dialog.link.sources.light=Externer Link|exturl,Interner Link|int,Interner Link per eindeutigem Namen|intname,Datei aus diesem Dokument|intfile,Datei aus Dateicontainer|file,Prim\u00E4re Datai aus Dokument|primaryfile
+dialog.link.sources.light=Externer Link|exturl,Interner Link|int,Interner Link per eindeutigem Namen|intname,Datei aus diesem Dokument|intfile,Datei aus Dateicontainer|file,Prim\u00E4re Datei aus Dokument|primaryfile
 dialog.link.target=Zielfenster
 dialog.link.unique-name=Eindeutiger Name
 dialog.link.update=Aktualisieren
