#00005011: New virtual link type "context expression"

--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -1,4 +1,4 @@
-#Thu Feb 09 13:47:04 CET 2017
+#Sun Jun 04 19:46:55 CEST 2017
 about=\u00DCber {1} Content Manager
 access=Berechtigung
 actions=Aktionen
@@ -536,13 +536,14 @@ dialog.ldap.title=Benutzer/Gruppen ausw\u00E4hlen ...
 dialog.ldap.type=Typ
 dialog.ldap.username=Benutzername
 dialog.link.enter-unique-name=Bitte geben Sie einen eindeutigen Namen ein...
+dialog.link.expression=Context Ausdruck
 dialog.link.insert=Einf\u00FCgen
 dialog.link.no-filename=Bitte geben Sie einen Dateinamen an\!
 dialog.link.select-document=Bitte w\u00E4hlen Sie ein Dokument aus
 dialog.link.source=Quelle
 dialog.link.source.clipboard=Datei aus Zwischenablage
 dialog.link.sources=Externer Link|exturl,Interner Link|int,Interner Link per eindeutigem Namen|intname,Datei aus diesem Dokument|intfile,Datei aus beliebigem Dokument|extfile,Datei aus Dateicontainer|file
-dialog.link.sources.light=Externer Link|exturl,Interner Link|int,Interner Link per eindeutigem Namen|intname,Datei aus diesem Dokument|intfile,Datei aus Dateicontainer|file,Prim\u00E4re Datei aus Dokument|primaryfile
+dialog.link.sources.light=Externer Link|exturl,Interner Link|int,Interner Link per eindeutigem Namen|intname,Datei aus diesem Dokument|intfile,Datei aus Dateicontainer|file,Prim\u00E4re Datei aus Dokument|primaryfile,Context-Expression|exp
 dialog.link.target=Zielfenster
 dialog.link.unique-name=Eindeutiger Name
 dialog.link.update=Aktualisieren
@@ -682,6 +683,7 @@ linkchecker-config.publishing-settings=Linkchecks beim Ver\u00F6ffentlichen
 linkchecker-config.validationerror.no-mail-address=Bitte geben Sie eine Mailadresse f\u00FCr die Reports an.
 linkchecker-config.validationerror.title=Konfiguration konnte nicht gespeichert werden.
 
+linktype.exp=Context-Ausdruck
 linktype.extfile=Datei aus beliebigem Dokument
 linktype.exturl=Externer Link
 linktype.file=Datei aus Dateicontainer
