--- a/OpenWGA/plugins/cm/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_en/general.properties
@@ -1,4 +1,4 @@
-#Thu Feb 09 13:46:57 CET 2017
+#Sun Jun 04 19:46:40 CEST 2017
 about=About {1} Content Manager
 access=Access
 actions=Actions
@@ -536,13 +536,14 @@ dialog.ldap.title=Select Users/Groups ...
 dialog.ldap.type=Type
 dialog.ldap.username=Username
 dialog.link.enter-unique-name=Please enter unique name...
+dialog.link.expression=Context Expression
 dialog.link.insert=insert
 dialog.link.no-filename=Please enter filename\!
 dialog.link.select-document=Please select a document
 dialog.link.source=Source
 dialog.link.source.clipboard=Attachment from Clipboard
 dialog.link.sources=External link|exturl,Internal link|int,Internal Link via unique name|intname,Attachment from this document|intfile,Attachment from any document|extfile,Attachment from file container|file
-dialog.link.sources.light=External link|exturl,Internal link|int,Internal Link via unique name|intname,Attachment from this document|intfile,Attachment from file container|file,Primary Attachment from Document|primaryfile
+dialog.link.sources.light=External link|exturl,Internal link|int,Internal Link via unique name|intname,Attachment from this document|intfile,Attachment from file container|file,Primary Attachment from Document|primaryfile,Context-Expression|exp
 dialog.link.target=Target
 dialog.link.unique-name=Unique Name
 dialog.link.update=update
@@ -676,6 +677,7 @@ linkchecker-config.publishing-settings=Check links on publishing
 linkchecker-config.validationerror.no-mail-address=Please specify an email address to send the reports to
 linkchecker-config.validationerror.title=Unable to save configuration
 
+linktype.exp=Context Expression
 linktype.extfile=Attachment from any document
 linktype.exturl=External link
 linktype.file=Attachment from file container
