#00005014: Content module "downloads": show thumbnails and file meta infos

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -1,4 +1,4 @@
-#Mon Jan 30 15:32:44 CET 2017
+#Mon Jun 05 00:19:17 CEST 2017
 align=Ausrichting
 attachments-from-template-not-supported=Dateianh\u00E4nge aus Vorlagen werden nicht unterst\u00FCtzt
 close=Schlie\u00DFen
@@ -99,7 +99,7 @@ download-list-file.description=Beschreibung
 download-list-file.file=Datei
 download-list-file.settings.source.options=Dieses Dokument|,Ausgew\u00E4hltes Dokument|any
 download-list-file.settings.source.template.options=Seitenvorlage|,Ausgew\u00E4hltes Dokument|any
-download-list-file.settings.title-source=Modultitel|module_title,Aus Datei Metadaten|file_md,Dateiname|filename
+download-list-file.settings.title-source=Modultitel|module_title,Aus Datei Metadaten|file_md,Dateiname|filename,Datei-Info|file_info
 download-list-file.source=Quelle
 download-list-file.title-source=Titel
 
