--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -1,4 +1,4 @@
-#Mon Jan 30 15:32:36 CET 2017
+#Mon Jun 05 00:18:51 CEST 2017
 align=Ausrichting
 attachments-from-template-not-supported=Attachments from a template are not supported
 close=Close
@@ -97,7 +97,7 @@ download-list-file.description=Description
 download-list-file.file=File
 download-list-file.settings.source.options=this document|,selected document|any
 download-list-file.settings.source.template.options=Page Template|,Selected Document|any
-download-list-file.settings.title-source=Moduletitle|module_title,From File metadata|file_md,Filename|filename
+download-list-file.settings.title-source=Moduletitle|module_title,From File metadata|file_md,Filename|filename,File-Info|file_info
 download-list-file.source=Source
 download-list-file.title-source=Title
 
@@ -113,7 +113,7 @@ fieldset.settings.legend=Legend
 
 filetype.images=Image
 filetype.office-docs=Office Document
-filetype.others=Other
+filetype.others=Othet
 filetype.pdf-docs=PDF Document
 filetype.videos=Video
 
