--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -1,5 +1,6 @@
-#Mon Jun 05 00:18:51 CEST 2017
+#Mon Jun 05 00:36:49 CEST 2017
 align=Ausrichting
+attachment-one-page=one page
 attachments-from-template-not-supported=Attachments from a template are not supported
 close=Close
 date=Date
@@ -27,6 +28,8 @@ accordion.settings.effect-speed-options=fast|fast,slow|slow
 accordion.settings.expand.first-section-options=Expand First Section|true
 
 align.options=Right|right,Left|left
+
+attachment.pages={1} pages
 
 child-nav.settings.parent.options=This Document|this,Parent-Document|parent,Selected Document|any
 
