--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -1,5 +1,6 @@
-#Mon Jun 05 00:19:17 CEST 2017
+#Mon Jun 05 00:36:57 CEST 2017
 align=Ausrichting
+attachment-one-page=eine Seite
 attachments-from-template-not-supported=Dateianh\u00E4nge aus Vorlagen werden nicht unterst\u00FCtzt
 close=Schlie\u00DFen
 date=Datum
@@ -27,6 +28,8 @@ accordion.settings.effect-speed-options=schnell|fast,langsam|slow
 accordion.settings.expand.first-section-options=Ersten Abschnitt anzeigen|true
 
 align.options=Rechts|right,Links|left
+
+attachment.pages={1} Seiten
 
 child-nav.settings.parent.options=Dieses Dokument|this,Parent-Dokument|parent,Ausgew\u00E4hltes Dokument|any
 
