#00005032: host based preferred language

--- a/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
+++ b/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
@@ -158,6 +158,8 @@ VirtualHost/hideHomepageURL = hide homepage URL for Default App
 VirtualHost/robotsTxt = robots.txt
 VirtualHost/allowAdminApps =Allow Admin Applications
 VirtualHost/allowAuthoringApps =Allow Authoring Applications
+VirtualHost/preferedLanguages=Prefered Languages for this Host
+VirtualHost/serverAliases=Aliases for this Host
 
 ProxyConfiguration/enabled = Enabled
 ProxyConfiguration/httpProxy = Http proxy host
