#00005037: Improved siteexplorer to use language behaviour

--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -703,7 +703,7 @@ login.user-is-no-designer=F\u00FCr diese Datenbank ben\u00F6tigen Sie mindestens
 no-content-found.message=Die Seite '{1}' ist entweder nicht vorhanden oder Sie haben keine Leseberechtigung f\u00FCr diese Seite
 no-content-found.title=Die angeforderte Seite wurde nicht gefunden
 
-no-content.message=F\u00FCr die Seite {1} sind in der ausgew\u00E4hlten Sprache keine nichtarchivierten Inhalte vorhanden.
+no-content.message=F\u00FCr die Seite '{1}' sind keine nichtarchivierten Inhalte in der Sprache '{2}' vorhanden.
 no-content.new-version-from-this=Neue Sprachversion aus dieser Version erstellen
 no-content.no-reader-message=Es liegt ein Inhalt in der Sprache <b>{1}</b> vor, sie besitzen jedoch keine Leseberechtigung f\u00FCr diesen Inhalt.
 no-content.no-reader-title=Keine Leseberechtigung
