--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -116,7 +116,7 @@ fieldset.settings.legend=Legend
 
 filetype.images=Image
 filetype.office-docs=Office Document
-filetype.others=Othet
+filetype.others=Other
 filetype.pdf-docs=PDF Document
 filetype.videos=Video
 
