attachment meta dialog beautified

--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -1,4 +1,4 @@
-#Sun Jun 04 19:46:55 CEST 2017
+#Thu Jul 27 13:46:29 CEST 2017
 about=\u00DCber {1} Content Manager
 access=Berechtigung
 actions=Aktionen
@@ -630,6 +630,7 @@ editor.text.button.insert-url-scriptlet=URL Scriptlet einsetzen
 editor.text.query-paste=Seitenschl\u00FCssel der Seite einf\u00FCgen\:  
 
 file-meta.copyright=Copyright
+file-meta.derivates=Derivate
 file-meta.description=Beschreibung
 file-meta.size=Gr\u00F6\u00DFe
 file-meta.title=Titel
