--- a/OpenWGA/plugins/cm/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_en/general.properties
@@ -1,4 +1,4 @@
-#Sun Jun 04 19:46:40 CEST 2017
+#Thu Jul 27 13:46:18 CEST 2017
 about=About {1} Content Manager
 access=Access
 actions=Actions
@@ -630,6 +630,7 @@ editor.text.button.insert-url-scriptlet=Insert URL Scriptlet
 editor.text.query-paste=Insert structkey of page 
 
 file-meta.copyright=Copyright
+file-meta.derivates=Derivates
 file-meta.description=Description
 file-meta.size=Size
 file-meta.title=Title
