removed platform.name=Wolf

--- a/OpenWGA/server/src/main/webapp/WEB-INF/brand.properties
+++ b/OpenWGA/server/src/main/webapp/WEB-INF/brand.properties
@@ -2,6 +2,6 @@ brand.name=OpenWGA
 brand.trademark.sign=\u2122
 product.name=Server
 product.eelicense.name=Enterprise Edition
-platform.name=Wolf
+#platform.name=Wolf
 product.url=https://openwga.com/
 startpage.url=/plugin-management/homepage:main
