#00005067: Unable to remove page in Content Manager and other access rights problems

--- a/OpenWGA/plugins/cm/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_en/general.properties
@@ -760,6 +760,9 @@ reason.content-with-no-readaccess=This page contains content you have no readacc
 reason.database-settings-denies-deletions=The database settings denies deletions of document.
 reason.database.you-need-to-be-author=You must at last be AUTHOR is this database.
 reason.database.you-need-to-be-editor=You must at last be EDITOR is this database.
+
+reason.database.you-need-to-be-manager=You must at last be CHIEFEDITOR is this database.
+
 reason.document-is-in-workflow=The document is in an approval workflow.
 reason.document-pending=This document is waiting to be published.
 reason.doucument-in-workflow-exists=There already exists a document in an approval workflow.
