--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -766,6 +766,7 @@ reason.content-with-no-readaccess=Die Seite enth\u00E4lt Inhalte, auf die Sie ke
 reason.database-settings-denies-deletions=Die Datenbankberechtigungen verbieten Ihnen das L\u00F6schen von Dokumenten.
 reason.database.you-need-to-be-author=Sie ben\u00F6tigen mindestens Autorenrechte in der Datenbank.
 reason.database.you-need-to-be-editor=Sie ben\u00F6tigen mindestens Editorrechte in der Datenbank.
+reason.database.you-need-to-be-manager=Sie ben\u00F6tigen mindestens Chief-Editor-Rechte in der Datenbank.
 reason.document-is-in-workflow=Das Dokument befindet sich im Genehmigungsworkflow.
 reason.document-pending=Das Dokument wartet auf Ver\u00F6ffentlichung.
 reason.doucument-in-workflow-exists=Es existiert bereits ein Dokument im Genehmigungsworkflow.
