#00005067: access rights problems

--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -788,6 +788,8 @@ reason.struct-settings-denies-edit=Die Berechtigungen am Strukturdokument '{1}' 
 reason.unknown=Unbekannte Ursache
 reason.you-are-no-author=Das Dokument ist in nicht von Ihnen erstellt. Sie ben\u00F6tigen mindestens EDITOR-Rechte in der Datenbank, um das Dokument bearbeiten zu k\u00F6nnen.
 
+reason.pagerightsfilter-denies-edit=PageRightsFilter verbietet das Bearbeiten des Inhalts (in dieser Sprache)
+
 rtf.alt=Alt
 rtf.border-width=Rahmenst\u00E4rke
 rtf.change-or-create=Erstellen/\u00C4ndern
