--- a/OpenWGA/plugins/cm/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_en/general.properties
@@ -784,6 +784,8 @@ reason.struct-settings-denies-edit=Settings in page '{1}' denies editing.
 reason.unknown=Unknown Reason
 reason.you-are-no-author=You are no author of this document. You must be EDITOR to edit this document.
 
+reason.pagerightsfilter-denies-edit=PageRightsFilter denies to edit content (in this language)
+
 rtf.alt=Alt
 rtf.border-width=Border width
 rtf.change-or-create=Create/Edit
