--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -768,7 +768,7 @@ reason.database.you-need-to-be-author=Sie ben\u00F6tigen mindestens Autorenrecht
 reason.database.you-need-to-be-editor=Sie ben\u00F6tigen mindestens Editorrechte in der Datenbank.
 reason.database.you-need-to-be-manager=Sie ben\u00F6tigen mindestens Chief-Editor-Rechte in der Datenbank.
 reason.document-is-in-workflow=Das Dokument befindet sich im Genehmigungsworkflow.
-reason.document-pending=Das Dokument wartet auf Ver\u00F6ffentlichung.
+reason.document-pending=Das Dokument wartet auf Ver\u00F6ffentlichung und sie sind nicht der Autor des Inhalts.
 reason.doucument-in-workflow-exists=Es existiert bereits ein Dokument im Genehmigungsworkflow.
 reason.doucument-pending-exists=Es wartet ein Dokument auf Ver\u00F6ffentlichung.
 reason.language-settings-denies-creation=Die Einstellungen in den Sprachdefinitionen verbieten das erstellen neuer Seiten.
