#00005142: Content Module "Form-Field": added placeholder setting

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -388,3 +388,5 @@ vote.one-vote=eine Bewertung
 vote.reset=zur\u00FCcksetzen
 vote.votes=Bewertungen
 vote.your-vote=Ihre Bewertung dieser Seite
+
+form.settings.placeholder=Platzhalter
