--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -385,3 +385,5 @@ vote.one-vote=one review
 vote.reset=Reset
 vote.votes=Reviews
 vote.your-vote=Your rating for this page
+
+form.settings.placeholder=Placeholder
