--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -466,7 +466,7 @@ dialog.delete-page.website-may-not-work=Die Website wird danach evtl. nicht mehr
 dialog.edit-content.checkout=Inhalt \u00FCbernehmen
 dialog.edit-content.creating-draft-copy=Arbeitskopie wird erzeugt
 dialog.edit-content.draft-exists=Es existiert bereits ein in Arbeit befindliches Dokument.
-dialog.edit-content.draft-in-use-by=Das Dokument ist in Bearbeiting von
+dialog.edit-content.draft-in-use-by=Das Dokument ist in Bearbeitung von
 dialog.edit-content.info-create-draft=Durch diese Aktion wird eine neue Arbeitskopie erzeugt. Diese Arbeitskopie ist f\u00FCr die "\u00D6ffentlichkeit" erst nach Ver\u00F6ffentlichung und Freigabe sichtbar.
 dialog.edit-content.last-modified=Die letzte Bearbeitung liegt 
 dialog.edit-content.last-modified2=Tage</b> zur\u00FCck
