#00005152: Added AFW.Util.dateRange(startdate, enddate)

--- a/OpenWGA/plugins/afw/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/afw/design/files/labels_de/general.properties
@@ -147,3 +147,6 @@ time.one-minute-ago=vor einer Minute
 date-group.format.last-30-days = d. MMMMM
 date-group.format.last-7-days = EEEEE d. MMMMM
 date-group.format.default = dd.MM.yyyy
+
+date-range.to=bis
+date-range.h=Uhr
