#00005155: Redesigned OpenWGA start page

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serveroptions/services.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serveroptions/services.properties
@@ -11,7 +11,7 @@ option.Services.AdminPageEnabled.title=WGA4 Administration Page
 option.Services.AdminPageEnabled.description=Administrative webpage from older WGA4 versions, callable via path /wga4admin. Usable as a fallback administrative tool.
 
 option.Services.StartPageEnabled.title=Start Page
-option.Services.StartPageEnabled.description=Enables/disables the start page, returned under root URL (as long as no other resource is bound to it) or "/start". On regular OpenWGA installations provides a resource for beginners with introductional information. Shows accessible OpenWGA applications on this server, so you might want to switch it off before going productive.
+option.Services.StartPageEnabled.description=Enables/disables the start page, returned under root URL (as long as no other resource is bound to it) or "/start". On regular OpenWGA installations provides status information. You might want to switch it off before going productive.
 
 option.Services.IntegratedJMX.Enabled.title=Integrated JMX server
 option.Services.IntegratedJMX.Enabled.description=Enables the JMX monitoring server integrated to OpenWGA, which uses WGA admin logins for authentication and uses fixed ports. Therefor it is able to be used through a firewall when these specific ports (1558, 29802) are opened on it. Use the following JMX URL to connect: service:jmx:rmi:///jndi/rmi://<hostname>:1558/jmxrmi (or an alternate registry port, if configured)
