--- a/OpenWGA/plugins/management/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/management/design/files/labels_de/general.properties
@@ -1,9 +1,8 @@
-login.database-not-found=Datenbank '{1}' konnte nicht ge\u00F6ffnet werden.
+login.database-not-found=Website '{1}' konnte nicht ge\u00F6ffnet werden.
 login.login-blocked=Der Anmeldename '{1}' wurde aufgrund wiederholter erfolgloser Anmeldeversuche gesperrt. Bitte wenden Sie sich an Ihren Administrator. 
 login.login-error=Anmeldefehler. Bitte pr\u00FCfen Sie Benutzername und Kennwort.
 login.please-login-as-author=Bitte melden sie sich als Autor an
-login.user-is-no-author=Benutzer '{1}' ist kein Autor der Datenbank '{2}'. Bitte melden sie sich als Autor an.
-login.user-is-no-designer=F\u00FCr diese Datenbank ben\u00F6tigen Sie mindestens Designer-Rechte.
+login.user-is-no-author=Benutzer '{1}' ist kein Autor der Website '{2}'. Bitte melden sie sich als Autor an.
 
 login.error-message=Die Anmeldung konnte nicht durchgeführt werden
 
