--- a/OpenWGA/plugins/management/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/management/design/files/labels_en/general.properties
@@ -1,12 +1,10 @@
 login.error-message=Unable to login
 
-login.database-not-found=Unable to open Database '{1}'.
-login.init-db-design.needs-init-by-designer=This content store needs to be initialized by as user with manager access.\nPlease login as user with manager access.
-login.login-blocked=The Login '{1}' has been blocked. Please ask your OpenWGA administraror.
+login.database-not-found=Unable to open Website '{1}'.
+login.login-blocked=The Login '{1}' has been blocked. Please ask your Administrator.
 login.login-error=Login error. Please check username and password.
 login.please-login-as-author=Please login as author
-login.user-is-no-author=User '{1}' is no author of database <strong>{2}</strong>. Please login as author.
-login.user-is-no-designer=You have to be designer to use this database
+login.user-is-no-author=User '{1}' is no Author of Website <strong>{2}</strong>. Please login as Author.
 
 status.a=<span style="color:red">archived</span>
 status.p=published
