#00005152: handling for start/end=null

--- a/OpenWGA/plugins/afw/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/afw/design/files/labels_en/general.properties
@@ -146,3 +146,7 @@ time.one-minute-ago=one minute ago
 date-group.format.last-30-days = MMMMM d
 date-group.format.last-7-days = EEEE MMM d
 date-group.format.default = yyyy/MM/dd
+
+date-range.from=from
+date-range.to=to
+date-range.h=h
