--- a/OpenWGA/plugins/afw/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/afw/design/files/labels_de/general.properties
@@ -148,5 +148,6 @@ date-group.format.last-30-days = d. MMMMM
 date-group.format.last-7-days = EEEEE d. MMMMM
 date-group.format.default = dd.MM.yyyy
 
+date-range.from=ab
 date-range.to=bis
 date-range.h=Uhr
