--- a/OpenWGA/plugins/plugin-xfire-server/.classpath
+++ b/OpenWGA/plugins/plugin-xfire-server/.classpath
@@ -7,5 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="de.innovationgate.eclipse.ids.classpath.WGALibrarySet/WGADeployment_server"/>
+	<classpathentry kind="con" path="de.innovationgate.eclipse.ids.classpath.WGALibrarySet/j2ee16"/>
+	<classpathentry kind="output" path="design/java"/>
 </classpath>
