--- a/OpenWGA/plugins/plugin-xfire-server/.project
+++ b/OpenWGA/plugins/plugin-xfire-server/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>XFireServer</name>
-	<comment></comment>
+	<name>plugin-xfire-server</name>
+	<comment>Project plugin-xfire-server created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -15,9 +15,14 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>de.innovationgate.eclipse.ids.builders.WGADesignResourceValidator</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
 </projectDescription>
