--- a/OpenWGA/server/build.gradle
+++ b/OpenWGA/server/build.gradle
@@ -13,7 +13,7 @@ compileJava.options.encoding = 'ISO-8859-1'
 dependencies {
     compile project(":wga");
     compile project(":tmlScript");    
-    compile project(":XFireServer");
+    //compile project(":XFireServer");
     
     compileClasspath project(":wgaBuildTools");
 }
@@ -55,6 +55,7 @@ task buildPlugins(type: Copy) {
 	from (project(":plugin-rest").tasks.buildPlugin.archivePath)
 	from (project(":plugin-cs-maintenance").tasks.buildPlugin.archivePath)
 	from (project(":plugin-app-ui-3-1").tasks.buildPlugin.archivePath)
+	from (project(":plugin-xfire-server").tasks.buildPlugin.archivePath)
    	into 'build/extra/WEB-INF/default-plugins'
 }
 buildPlugins.dependsOn project(":plugin-cm").tasks.buildPlugin
@@ -66,5 +67,6 @@ buildPlugins.dependsOn project(":plugin-management").tasks.buildPlugin
 buildPlugins.dependsOn project(":plugin-rest").tasks.buildPlugin
 buildPlugins.dependsOn project(":plugin-cs-maintenance").tasks.buildPlugin
 buildPlugins.dependsOn project(":plugin-app-ui-3-1").tasks.buildPlugin
+buildPlugins.dependsOn project(":plugin-xfire-server").tasks.buildPlugin
 
 war.dependsOn writeVersion, buildPlugins, createTld
