--- a/OpenWGA/settings.gradle
+++ b/OpenWGA/settings.gradle
@@ -12,8 +12,6 @@ project(":wgapiJdbc").projectDir = file("libraries/wgapiJdbc")
 include ":servicesClient"
 project(":servicesClient").projectDir = file("libraries/servicesClient") 
 
-include ":XFireServer"
-project(":XFireServer").projectDir = file("libraries/XFireServer")
 
 include ":wgaBuildTools"
 project(":wgaBuildTools").projectDir = file("libraries/wgaBuildTools")
@@ -55,3 +53,6 @@ project(":plugin-cs-maintenance").projectDir = file("plugins/cs-maintenance")
 
 include ":plugin-app-ui-3-1"
 project(":plugin-app-ui-3-1").projectDir = file("plugins/app-ui-3-1")
+
+include ":plugin-xfire-server"
+project(":plugin-xfire-server").projectDir = file("plugins/plugin-xfire-server")
